--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
-  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.1.7/manifests/install.yaml
+        #  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.1.7/manifests/install.yaml
+  - base/install.yaml
 patchesStrategicMerge:
   - patch/argocd-server-svc.yaml
