--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -4,5 +4,7 @@ namespace: argocd
 resources:
         #  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.1.7/manifests/install.yaml
   - base/install.yaml
-patchesStrategicMerge:
-  - patch/argocd-server-svc.yaml
+patches:
+  - path: patch/argocd-server-svc.yaml
+    target:
+      kind: Service
