--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -4,11 +4,12 @@ namespace: metallb-system
 resources:
   - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/namespace.yaml
   - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/metallb.yaml
+  - config/metallb-config.yaml
 
-configMapGenerator:
-  - name: config
-    files:
-    - config/metallb-config.yaml
+    #configMapGenerator:
+    #  - name: config
+    #    files:
+    #    - config/metallb-config.yaml
 
 generatorOptions:
   - disableNameSuffixHash: true
