--- a/traefik/daemon-set.yaml
+++ b/traefik/daemon-set.yaml
@@ -51,4 +51,4 @@ spec:
         - --certificatesresolvers.default.acme.tlschallenge
         # Use the staging ACME server. Uncomment this while testing to prevent
         # hitting rate limits in production.
-        # - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/dire
+        - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/dire
