--- a/traefik/cluster-role.yaml
+++ b/traefik/cluster-role.yaml
@@ -15,8 +15,10 @@ rules:
       - watch
   - apiGroups:
       - extensions
+      - networking.k8s.io
     resources:
       - ingresses
+      - ingressclasses
     verbs:
       - get
       - list
@@ -34,7 +36,10 @@ rules:
       - ingressroutes
       - traefikservices
       - ingressroutetcps
+      - ingressrouteudps
       - tlsoptions
+      - tlsstores
+      - serverstransports
     verbs:
       - get
       - list
