--- a/traefik/kustomization.yaml
+++ b/traefik/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 - service-account.yaml
 - daemon-set.yaml
 
-- /ingress/argocd-ingress.yaml
+- ingress/argocd-ingress.yaml
 
 namespace: traefik
 
