--- a/traefik/ingress/argocd-ingress.yaml
+++ b/traefik/ingress/argocd-ingress.yaml
@@ -1,13 +1,13 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: argo-ui
+  name: argocd-server
   namespace: argocd
   annotations:
    kubernetes.io/ingress.class: "traefik"
-#   ingress.kubernetes.io/ssl-redirect: "false"
-#   nginx.ingress.kubernetes.io/ssl-redirect: "false"
-#   cert-manager.io/cluster-issuer: letsencrypt-prod
+   ingress.kubernetes.io/ssl-redirect: "false"
+   #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
+   #   cert-manager.io/cluster-issuer: letsencrypt-prod
 
 spec:
         #  tls:
