--- a/traefik/kustomization.yaml
+++ b/traefik/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - cluster-role-binding.yaml
 - service-account.yaml
 - daemon-set.yaml
+- service.yaml
 
 - ingress/argocd-ingress.yaml
 
