--- a/traefik/service.yaml
+++ b/traefik/service.yaml
@@ -3,11 +3,19 @@ kind: Service
 metadata:
   name: traefik-ingress-service
   namespace: traefik
+  labels:
+    app.kubernetes.io/instance: traefik
+    app.kubernetes.io/name: traefik
+  annotations:
+    metallb.universe.tf/address-pool: defaukt
+
 
 spec:
   type: LoadBalancer
+  loadBalancerIP: 192.168.100.30
   selector:
     app: traefik
+
 
   ports:
     - name: http
