--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -10,6 +10,5 @@ configMapGenerator:
   - name: config
     files:
     - config/metallb-config.yaml
-
 generatorOptions:
-  - disableNameSuffixHash: true
+  disableNameSuffixHash: true
