--- a/traefik/service.yaml
+++ b/traefik/service.yaml
@@ -12,7 +12,7 @@ metadata:
 
 spec:
   type: LoadBalancer
-  loadBalancerIP: 192.168.100.30
+  #  loadBalancerIP: 192.168.100.30
   selector:
     app: traefik
 
