--- a/metallb/config/metallb-config.yaml
+++ b/metallb/config/metallb-config.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: default
+    - name: public-pool
       protocol: layer2
       addresses:
       - 192.168.100.30-192.168.100.40
