--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: metallb-system
 resources:
   - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/namespace.yaml
   - https://raw.githubusercontent.com/metallb/metallb/v0.12.1/manifests/metallb.yaml
+  - config/metallb-addresspool.yaml
     #  - config/metallb-config.yaml
 
 configMapGenerator:
