--- a/traefik/ingress/argocd-ingress.yaml
+++ b/traefik/ingress/argocd-ingress.yaml
@@ -1,6 +1,6 @@
-apiVersion: traefik.containo.us/v1alpha1
-kind: Ingressroute
-metadata:
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+etadata:
   name: argocd-ui
   namespace: argocd
   #  annotations:
