--- a/traefik/ingress/argocd-ingress.yaml
+++ b/traefik/ingress/argocd-ingress.yaml
@@ -4,10 +4,10 @@ metadata:
   name: argocd-ui
   namespace: argocd
     annotations:
-     kubernetes.io/ingress.class: "traefik"
-     #   ingress.kubernetes.io/ssl-redirect: "false"
-   #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
-   #   cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: "traefik"
+      ingress.kubernetes.io/ssl-redirect: "false"
+      nginx.ingress.kubernetes.io/ssl-redirect: "false"
+      #   cert-manager.io/cluster-issuer: letsencrypt-prod
 
 spec:
         #  tls:
