--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -1,9 +1,25 @@
-name: traefik
 apiVersion: v2
-version: 1.0.0
+name: traefik
+description: A Traefik based Kubernetes ingress controller
+type: application
+version: 10.19.5
+appVersion: 2.6.6
+keywords:
+  - traefik
+  - ingress
+home: https://traefik.io/
+sources:
+  - https://github.com/traefik/traefik
+  - https://github.com/traefik/traefik-helm-chart
+maintainers:
+  - name: emilevauge
+    email: emile@vauge.com
+  - name: dtomcej
+    email: daniel.tomcej@gmail.com
+  - name: ldez
+    email: ldez@traefik.io
+icon: https://raw.githubusercontent.com/traefik/traefik/v2.3/docs/content/assets/img/traefik.logo.png
 dependencies: # A list of the chart requirements (optional)
   - name: traefik
-    version: 10.19.5
     appVersion: 2.6.6
     repository: https://helm.traefik.io/traefik
-
