--- a/helm/traefik/Chart.yaml
+++ b/helm/traefik/Chart.yaml
@@ -3,7 +3,7 @@ name: traefik
 description: A Traefik based Kubernetes ingress controller
 type: application
 version: 10.19.5
-appVersion: 2.6.6
+#appVersion: 2.6.6
 keywords:
   - traefik
   - ingress
