Commented out namespace

--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -21,4 +21,4 @@ spec:
           backend:
             serviceName: argocd-server
             servicePort: http
-            namespace: argocd
+            #            namespace: argocd
