--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: argocd
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
+      match: Host('argocd.k8s.lenin.nu')
       services:
       - name: argocd-server
-        port: 80
+        port: 8080
