--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -5,10 +5,13 @@ metadata:
   namespace: argocd
 spec:
   entryPoints:
-    - websecure
+    - web
   routes:
     - kind: Rule
       match: Host('argocd.k8s.lenin.nu')
+      middlewares:
+        - name: httpsredirect
+          namespace: traefik
       services:
       - name: argocd-server
-        port: 8080
+        port: 80
