--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -88,7 +88,7 @@ additionalVolumeMounts: []
 
 logs:
   general:
-    level: WARNING
+    level: WARN
   access:
     enabled: false
     filters: {}
