--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -8,7 +8,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: Host('argocd.k8s.lenin.nu')
+      match: Host(`argocd.k8s.lenin.nu`)
       services:
       - name: argocd-server
         port: 80
