--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -23,8 +23,8 @@ items:
       - name: httpsredirect
         namespace: traefik
       services:
-      - name: argo-server
-        port: 2746
+      - name: argocd-server
+        port: 443
 - apiVersion: traefik.containo.us/v1alpha1
   kind: IngressRoute
   metadata:
@@ -42,6 +42,6 @@ items:
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
       services:
-      - name: argo-server
-        port: 2746
+      - name: argocd-server
+        port: 80
 kind: List
