Allow cross namespace something something

--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -109,6 +109,7 @@ tracing: {}
 globalArguments:
   - "--global.checknewversion"
   - "--global.sendanonymoususage"
+  - "--providers.kubernetescrd.allowCrossNamespace=true"
 
 additionalArguments: []
 
