Removed traefik ingress

--- a/ingressroutes/kustomization.yaml
+++ b/ingressroutes/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
   - ingress/argocd-ingress.yaml
-  - ingress/traefik-ingress.yaml
+    #  - ingress/traefik-ingress.yaml
 generatorOptions:
   disableNameSuffixHash: true
