Run argo insecurely

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -10,3 +10,5 @@ patches:
     target:
       kind: Service
       name: argocd-server
+patchesStrategicMerge:
+  - patch/argocd-cmd-params-cm-patch.yml
