--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -39,9 +39,9 @@ items:
       services:
       - name: argocd-server
         port: 80
-    - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
-      services:
-      - name: argocd-server
-        port: 443
-kind: List
+        #    - kind: Rule
+        #      match: Host(`argocd.k8s.lenin.nu`)
+        #      services:
+        #      - name: argocd-server
+        #        port: 443
+        #kind: List
