--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -44,4 +44,4 @@ items:
         #      services:
         #      - name: argocd-server
         #        port: 443
-        #kind: List
+kind: List
