--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   replicas: 1
   selector:
+    matchLabels:
+      app.kubernetes.io/name: yopass
   template:
     spec:
       containers:
