--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -8,6 +8,9 @@ spec:
     matchLabels:
       app.kubernetes.io/name: yopass
   template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: yoapss
     spec:
       containers:
         - name: yopass
