--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: yoapss
+        app.kubernetes.io/name: yopass
     spec:
       containers:
         - name: yopass
