--- a/ingressroutes/kustomization.yaml
+++ b/ingressroutes/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
   - ingress/argocd-ingress.yaml
     #  - ingress/traefik-ingress.yaml
+  - ingress/yopass-ingress.yaml
 generatorOptions:
   disableNameSuffixHash: true
