--- a/helm/traefik/values.yaml
+++ b/helm/traefik/values.yaml
@@ -72,7 +72,9 @@ providers:
     enabled: true
     allowCrossNamespace: true
     allowExternalNameServices: false
-    namespaces: []
+    namespaces: 
+      - "tools"
+      - "argocd"
 
   kubernetesIngress:
     enabled: true
