--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: yopass
           image: jhaals/yopass:11.4.3
           args:
-            - "--memcached=yopass-memcached:11211"
+            - "--memcached=localhost:11211"
             - "--port=8080"
           ports:
             - name: http
