--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -11,17 +11,17 @@ items:
     routes:
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
-      #      middlewares:
-#      - name: httpsredirect
-#        namespace: traefik
+            middlewares:
+      - name: httpsredirect
+        namespace: traefik
       services:
       - name: argocd-server
         port: 80
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
-      #      middlewares:
-      #      - name: httpsredirect
-      #        namespace: traefik
+            middlewares:
+            - name: httpsredirect
+              namespace: traefik
       services:
       - name: argocd-server
         port: 443
@@ -39,9 +39,9 @@ items:
       services:
       - name: argocd-server
         port: 80
-        #    - kind: Rule
-        #      match: Host(`argocd.k8s.lenin.nu`)
-        #      services:
-        #      - name: argocd-server
-        #        port: 443
+            - kind: Rule
+              match: Host(`argocd.k8s.lenin.nu`)
+              services:
+              - name: argocd-server
+                port: 443
 kind: List
