--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
+kind: List
 items:
 - apiVersion: traefik.containo.us/v1alpha1
   kind: IngressRoute
@@ -11,17 +12,17 @@ items:
     routes:
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
-      middlewares:
-        - name: httpsredirect
-          namespace: traefik
+      #      middlewares:
+      #        - name: httpsredirect
+      #          namespace: traefik
       services:
       - name: argocd-server
         port: 80
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
-      middlewares:
-        - name: httpsredirect
-          namespace: traefik
+      #      middlewares:
+      #        - name: httpsredirect
+      #          namespace: traefik
       services:
       - name: argocd-server
         port: 443
@@ -44,4 +45,3 @@ items:
               services:
               - name: argocd-server
                 port: 443
-kind: List
