--- a/ingressroutes/middlewares/https-redirect.yaml
+++ b/ingressroutes/middlewares/https-redirect.yaml
@@ -6,3 +6,21 @@ metadata:
 spec:
   redirectScheme:
     scheme: https
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: httpsredirect
+  namespace: tools
+spec:
+  redirectScheme:
+    scheme: https
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: httpsredirect
+  namespace: argocd
+spec:
+  redirectScheme:
+    scheme: https
