Add alternate service

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
         #  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.1.7/manifests/install.yaml
         #  - base/install.yaml
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.3.3/manifests/install.yaml
+  - service/argocd-rescue.yaml
 patches:
   - path: patch/argocd-server-svc.yaml
     target:
