--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -1,35 +1,33 @@
-apiVersion: v1
-kind: List
-items:
-- apiVersion: traefik.containo.us/v1alpha1
-  kind: IngressRoute
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: argocd-http
+  namespace: argocd
+spec:
+  entryPoints:
+  - web
+  routes:
+  - kind: Rule
+    match: Host(`argocd.k8s.lenin.nu`)
+    middlewares:
+      - name: httpsredirect
+    services:
+    - name: argocd-server
+      port: 80
+      namespace: argocd
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
   metadata:
-    name: argocd-http
-    namespace: argocd
-  spec:
-    entryPoints:
-    - web
-    routes:
-    - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
-      middlewares:
-        - name: httpsredirect
-      services:
-      - name: argocd-server
-        port: 80
-        namespace: argocd
-- apiVersion: traefik.containo.us/v1alpha1
-  kind: IngressRoute
-  metadata:
-    name: argocd-https
-    namespace: argocd
-  spec:
-    entryPoints:
-    - websecure
-    routes:
-    - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
-      services:
-      - name: argocd-server
-        port: 443
-        namespace: argocd
+  name: argocd-https
+  namespace: argocd
+spec:
+  entryPoints:
+  - websecure
+  routes:
+  - kind: Rule
+    match: Host(`argocd.k8s.lenin.nu`)
+    services:
+    - name: argocd-server
+      port: 443
+      namespace: argocd
