--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.3.3/manifests/install.yaml
   - service/argocd-rescue.yaml
 patchesStrategicMerge:
-        #  - patch/argocd-cmd-params-cm-patch.yml
+  - patch/argocd-cmd-params-cm-patch.yml
