--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -1,33 +1,22 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: argocd-http
+  name: argocd-server
   namespace: argocd
 spec:
   entryPoints:
-  - web
+    - websecure
   routes:
-  - kind: Rule
-    match: Host(`argocd.k8s.lenin.nu`)
-    middlewares:
-      - name: httpsredirect
-    services:
-    - name: argocd-server
-      port: 80
-      namespace: argocd
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: argocd-https
-  namespace: argocd
-spec:
-  entryPoints:
-  - websecure
-  routes:
-  - kind: Rule
-    match: Host(`argocd.k8s.lenin.nu`)
-    services:
-    - name: argocd-server
-      port: 80
-      namespace: argocd
+    - kind: Rule
+      match: Host(`argocd.k8s.lenin.nu`)
+      priority: 10
+      services:
+        - name: argocd-server
+          port: 80
+    - kind: Rule
+      match: Host(`argocd.k8s.lenin.nu`) && Headers(`Content-Type`, `application/grpc`)
+      priority: 11
+      services:
+        - name: argocd-server
+          port: 80
+          scheme: h2c
