--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -3,9 +3,9 @@ kind: IngressRoute
 metadata:
   name: argocd-server
   namespace: argocd
-annotations:
-  traefik.ingress.kubernetes.io/router.entrypoints: websecure
-  traefik.ingress.kubernetes.io/router.tls: "true"
+  annotations:
+    - traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    - traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   entryPoints:
     - websecure
