--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: argocd-server
   namespace: argocd
   annotations:
-    - traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    - traefik.ingress.kubernetes.io/router.tls: "true"
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   entryPoints:
     - websecure
