--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -17,9 +17,8 @@ spec:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`) && Headers(`Content-Type`, `application/grpc`)
+      match: Host(`argocd.k8s.lenin.nu`)
       priority: 11
       services:
         - name: argocd-server
           port: 80
-          scheme: h2c
