--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -16,9 +16,11 @@ spec:
       services:
         - name: argocd-server
           port: 80
+          namespace: argocd
     - kind: Rule
       match: Host(`argocd.k8s.lenin.nu`)
       priority: 11
       services:
         - name: argocd-server
           port: 80
+          namespace: argocd
