--- a/ingressroutes/ingress/argocd-ingress.yaml
+++ b/ingressroutes/ingress/argocd-ingress.yaml
@@ -1,26 +1,33 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: argocd-server
+  name: argocd-http
   namespace: argocd
-  annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   entryPoints:
-    - websecure
+  - web
   routes:
-    - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
-      priority: 10
-      services:
-        - name: argocd-server
-          port: 80
-          namespace: argocd
-    - kind: Rule
-      match: Host(`argocd.k8s.lenin.nu`)
-      priority: 11
-      services:
-        - name: argocd-server
-          port: 80
-          namespace: argocd
+  - kind: Rule
+    match: Host(`argocd.k8s.lenin.nu`)
+    middlewares:
+      - name: httpsredirect
+    services:
+    - name: argocd-server
+      port: 80
+      namespace: argocd
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: argocd-https
+  namespace: argocd
+spec:
+  entryPoints:
+  - websecure
+  routes:
+  - kind: Rule
+    match: Host(`argocd.k8s.lenin.nu`)
+    services:
+    - name: argocd-server
+      port: 80
+      namespace: argocd
