--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.3.3/manifests/install.yaml
   - service/argocd-rescue.yaml
   - ingress/argocd-ingress.yaml
+  - ingress/middlewares.yaml
 patchesStrategicMerge:
   - patch/argocd-cmd-params-cm-patch.yml
