--- a/argocd/ingress/argocd-ingress.yaml
+++ b/argocd/ingress/argocd-ingress.yaml
@@ -9,25 +9,25 @@ spec:
   routes:
   - kind: Rule
     match: Host(`argocd.k8s.lenin.nu`)
-#    middlewares:
-#      - name: httpsredirect
+    middlewares:
+      - name: httpsredirect
     services:
     - name: argocd-server
       port: 80
       namespace: argocd
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: argocd-https
-  namespace: argocd
-spec:
-  entryPoints:
-  - websecure
-  routes:
-  - kind: Rule
-    match: Host(`argocd.k8s.lenin.nu`)
-    services:
-    - name: argocd-server
-      port: 80
-      namespace: argocd
+#---
+#apiVersion: traefik.containo.us/v1alpha1
+#kind: IngressRoute
+#metadata:
+#  name: argocd-https
+#  namespace: argocd
+#spec:
+#  entryPoints:
+#  - websecure
+#  routes:
+#  - kind: Rule
+#    match: Host(`argocd.k8s.lenin.nu`)
+#    services:
+#    - name: argocd-server
+#      port: 80
+# namespace: argocd
