--- a/ingressroutes/kustomization.yaml
+++ b/ingressroutes/kustomization.yaml
@@ -2,11 +2,11 @@ resources:
 # INGRESSROUTES
 #  - ingress/argocd-ingress.yaml
 #  - ingress/traefik-ingress.yaml
-  - ingress/yopass-ingress.yaml
+#  - ingress/yopass-ingress.yaml
 
 # MIDDLEWARES
 
-  - middlewares/https-redirect.yaml
+#  - middlewares/https-redirect.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
