--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -4,7 +4,7 @@ namespace: metallb-system
 resources:
 #  - https://raw.githubusercontent.com/metallb/metallb/v0.13.7/manifests/namespace.yaml
 #  - https://raw.githubusercontent.com/metallb/metallb/v0.13.7/manifests/metallb.yaml
-  - https://raw.githubusercontent.com/metallb/metallb/v0.13.7/config/manifests/metallb-native.yaml
+  - github.com/metallb/metallb/config/native?ref=v0.13.7
 
   - config/configmap.yaml
 
