--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - github.com/metallb/metallb/config/native?ref=v0.13.7
 
   - config/configmap.yaml
-
+  - config/pool.yaml
 generatorOptions:
   disableNameSuffixHash: true
