--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
   - ingress/argocd-ingress.yaml
   - ingress/middleware.yaml
 patchesStrategicMerge:
-  - patch/argocd-cmd-params-cm-patch.yml
+  - argocd-cm.yml
