--- a/yopass/redis-pvc.yaml
+++ b/yopass/redis-pvc.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    app.kubernetes.io/function: db
-    app.kubernetes.io/kind: MySQL
     app.kubernetes.io/service: yopass-redis
   name: yopass-redis-pvc
 spec:
+  storageClassName: rook-ceph-block
   accessModes:
     - ReadWriteOnce
   resources:
