--- a/yopass/kustomization.yaml
+++ b/yopass/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - service.yaml
   - ingress/middleware.yaml
   - ingress/yopass-ingress.yaml
-  - redis-pvc.yaml
+  - redis/redis-pvc.yaml
