--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -44,3 +44,4 @@ spec:
         - name: prometheus-storage-volume
           persistentVolumeClaim:
             claimName: prometheus-data-pvc
+      revisionHistoryLimit: 1
