prometheus volume workaround

--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -36,6 +36,8 @@ spec:
               mountPath: /etc/prometheus/
             - name: prometheus-storage-volume
               mountPath: /prometheus/
+          securityContext:
+            fsGroup: 65534 
       volumes:
         - name: prometheus-config-volume
           configMap:
