lets ignore some grafana provisioning things

--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -30,14 +30,14 @@ spec:
         volumeMounts:
           - mountPath: /var/lib/grafana
             name: grafana-storage
-          - mountPath: /etc/grafana/provisioning/datasources
-            name: grafana-datasources
-            readOnly: false
+#          - mountPath: /etc/grafana/provisioning/datasources
+#            name: grafana-datasources
+#            readOnly: false
       volumes:
         - name: grafana-storage
           persistentVolumeClaim:
             claimName: grafana-storage-pvc
-        - name: grafana-datasources
-          configMap:
-              defaultMode: 420
-              name: grafana-datasources
+#        - name: grafana-datasources
+#          configMap:
+#              defaultMode: 420
+#              name: grafana-datasources
